--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -205,6 +205,7 @@
         
             &__price-value {
                 font-size: 4rem;
+                font-weight: 300;
             }
     }
 }
